--- a/pages/gladis_base.html
+++ b/pages/gladis_base.html
@@ -31,7 +31,7 @@ video#bgvid {
     max-width: 100%;
     width: 100%;
     height: 100%;
-    object-fit: none;
+    object-fit: cover;
     object-position: center;
 }
 
