--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Projecto Gladis
 
 <title>
 
-Hellstrike
+Projecto Gladis
 
 </title>
 
@@ -253,7 +253,7 @@ iframe {
 
 <iframe width="100%" height="100%" src="pages/backgrounds/walls.html" name="walls"></iframe>
 
-<iframe width="100%" height="100%" src="pages/hell.html" name="iframe_a"></iframe>
+<iframe width="100%" height="100%" src="pages/gladis.html" name="iframe_a"></iframe>
 
 
 <ul>
