--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ Projecto Gladis
 
 </title>
 
-<meta property="og:title" content="Hellstrike" />
+<meta property="og:title" content="Proyectogladis" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://hellstrikecs.github.io" />
-<meta property="og:image" content="https://raw.githubusercontent.com/hellstrikecs/hellstrikecs.github.io/master/pages/images/metahellstrike.jpg" />
-<meta property="og:description" content="Hellstrike is a full project for counter-strike 1.6 by 7053r studios" />
+<meta property="og:url" content="https://foxtrotsaber.github.io/proyecto-gladis/" />
+<meta property="og:image" content="https://raw.githubusercontent.com/FoxtrotSaber/proyecto-gladis/main/pages/images/metahellstrike.jpg" />
+<meta property="og:description" content="Gladis, Gestor-Lector Ayudante de Datos Inteligente y Sistemático" />
 <meta name="theme-color" content="black">
 
 <meta name="twitter:card" content="summary_large_image">
@@ -253,7 +253,7 @@ iframe {
 
 <iframe width="100%" height="100%" src="pages/backgrounds/walls.html" name="walls"></iframe>
 
-<iframe width="100%" height="100%" src="pages/gladis.html" name="iframe_a"></iframe>
+<iframe width="100%" height="100%" src="pages/mainpage.html" name="iframe_a"></iframe>
 
 
 <ul>
@@ -275,7 +275,7 @@ iframe {
       <a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
     </div>
   </div>
-  <div class="home"><a href="pages/mainpage.html" target="iframe_a">home</a></div>
+  <div class="home"><a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a></div>
   <div class="hell"><a href="pages/hell.html" target="iframe_a"></a></div>
    
 </div>
