--- a/pages/mainpage_base.html
+++ b/pages/mainpage_base.html
@@ -65,6 +65,8 @@ iframe {
 .smallbanner1 img {
     position: relative;
     width: 100%;
+		outline: 7px solid #0000007d;
+    outline-offset: -7px;
 }
 
 
@@ -78,6 +80,8 @@ iframe {
 .smallbanner2 img {
     position: relative;
     width: 100%;
+		outline: 7px solid #0000007d;
+    outline-offset: -7px;
 }
 
 
@@ -92,6 +96,8 @@ iframe {
 .mediumbanner1 img {
     position: relative;
     width: 560px;
+		outline: 7px solid #0000007d;
+    outline-offset: -7px;
 }
 
 .mediumbanner2 {
@@ -105,6 +111,8 @@ iframe {
     position: relative;
     width: 560px;
     margin-left: 12px;
+		outline: 7px solid #0000007d;
+    outline-offset: -7px;
 }
 
 .blogger {
@@ -156,7 +164,7 @@ iframe {
 	.bodypage {
 		position: relative;
 		display: table;
-		width: 100%;
+		width: 97%;
 		top: 4em;
 		margin-left: auto;
 		margin-right: auto;
@@ -273,7 +281,7 @@ iframe {
 	.bodypage {
 		position: relative;
 		display: table;
-		width: 100%;
+		width: 97%;
 		top: 4em;
 		margin-left: auto;
 		margin-right: auto;
@@ -381,25 +389,25 @@ iframe {
 
 <div class="smallbanner1">
 
-	<a href="https://gamebanana.com/wips/50611" target="_blank"><img src="images/hellstrike_wip.jpg" alt="smallbanner"></a>
+	<a href="https://openai.com/" target="_blank"><img src="images/image1.jpg" alt="smallbanner"></a>
 
 </div>
 
 <div class="smallbanner2">
 
-	<a href="https://gamebanana.com/wips/50611"><img src="images/hellstrike_wip.jpg" alt="smallbanner"></a>
+	<a href="https://chat.openai.com/"><img src="images/image2.jpg" alt="smallbanner"></a>
 	
 </div>
 
 <div class="mediumbanner1">
 
-	<a href="https://gamebanana.com/wips/50611" target="_blank"><img src="images/test.jpg" alt="mediumbanner1" name="mediumbanner1"></a>
+	<a href="https://www.bing.com/create" target="_blank"><img src="images/image3.jpg" alt="mediumbanner1" name="mediumbanner1"></a>
 
 </div>
 
 <div class="mediumbanner2">
 
-	<a href="https://gamebanana.com/wips/50611" target="_blank"><img src="images/test.jpg" alt="mediumbanner2" name="mediumbanner2"></a>
+	<a href="https://utp.ac.pa/" target="_blank"><img src="images/image4.jpg" alt="mediumbanner2" name="mediumbanner2"></a>
 
 </div>
 
@@ -407,7 +415,7 @@ iframe {
 
 	<div class="bloggerpad">
 
-		<iframe width="100%" height="100%" src="https://hellstrike-changelog.blogspot.com/" allowtransparency="true" name="walls"></iframe>
+		<iframe width="100%" height="100%" src="https://fs-proyectogladis.blogspot.com/" allowtransparency="true" name="walls"></iframe>
 
 	</div>
 
