--- a/pages/changelog_base.html
+++ b/pages/changelog_base.html
@@ -93,7 +93,7 @@ iframe {
 
 	<div class="bloggerpad">
 
-		<iframe width="100%" height="100%" src="https://hellstrike-changelog.blogspot.com/" name="iframe_a"></iframe>
+		<iframe width="100%" height="100%" src="https://fs-proyectogladis.blogspot.com/" name="iframe_a"></iframe>
 
 	</div>
 
