--- a/pages/gladis.html
+++ b/pages/gladis.html
@@ -7,10 +7,18 @@
 
 <title>
 
-Hellstrike
+Gladis
 
 </title>
 
+<meta property="og:title" content="Proyectogladis" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://foxtrotsaber.github.io/proyecto-gladis/" />
+<meta property="og:image" content="https://raw.githubusercontent.com/FoxtrotSaber/proyecto-gladis/main/pages/images/metahellstrike.jpg" />
+<meta property="og:description" content="Gladis, Gestor-Lector Ayudante de Datos Inteligente y Sistemático" />
+<meta name="theme-color" content="black">
+
+<meta name="twitter:card" content="summary_large_image">
 
 <style>
 
@@ -268,12 +276,12 @@ iframe {
     <button class="dropbtn"> <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="" target="iframe_a">Home</a>
+      <a href="mainpage.html" target="iframe_a">Home</a>
       <a href="changelog.html" target="iframe_a">Updates</a>
       <a href="gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
     </div>
   </div>
-  <div class="home"><a href="mainpage.html" target="iframe_a">home</a></div>
+  <div class="home"><a href="gladis.html" target="iframe_a">G.L.A.D.I.S.</a></div>
   <div class="hell"><a href="hell.html" target="iframe_a"></a></div>
    
 </div>
