--- a/pages/gladis_base.html
+++ b/pages/gladis_base.html
@@ -30,9 +30,10 @@ video#bgvid {
     margin-left: 0%;
     max-width: 100%;
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: cover;
     object-position: center;
+	top: 5%;
 }
 
 
