--- a/pages/hell.html
+++ b/pages/hell.html
@@ -14,6 +14,14 @@ Projecto Gladis
 
 </title>
 
+<meta property="og:title" content="Proyectogladis" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://foxtrotsaber.github.io/proyecto-gladis/" />
+<meta property="og:image" content="https://raw.githubusercontent.com/FoxtrotSaber/proyecto-gladis/main/pages/images/metahellstrike.jpg" />
+<meta property="og:description" content="Gladis, Gestor-Lector Ayudante de Datos Inteligente y Sistemático" />
+<meta name="theme-color" content="black">
+
+<meta name="twitter:card" content="summary_large_image">
 
 <style>
 
@@ -278,7 +286,7 @@ iframe {
       <a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
     </div>
   </div>
-  <div class="home"><a href="mainpage.html" target="iframe_a">home</a></div>
+  <div class="home"><a href="gladis.html" target="iframe_a">G.L.A.D.I.S.</a></div>
   <div class="hell"><a href="hell.html" target="iframe_a"></a></div>
    
 </div>
