--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ iframe {
   <li><a class="active" href="pages/hell.html" target="iframe_a"></a></li>
   <li><a href="pages/mainpage.html" target="iframe_a">Home</a></li>
   <li><a href="pages/changelog.html" target="iframe_a">Updates</a></li>
-  <li><a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a></li>
+  <li><a href="pages/gladis.html" target="iframe_a">Click aqui para ver G.L.A.D.I.S.</a></li>
 </ul>
 
 
@@ -275,10 +275,12 @@ iframe {
       <a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
     </div>
   </div>
-  <div class="home"><a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a></div>
+  <div class="home"><a href="pages/gladis.html" target="iframe_a">-> Presione aqui para ver G.L.A.D.I.S. <-</a></div>
   <div class="hell"><a href="pages/hell.html" target="iframe_a"></a></div>
    
 </div>
+
+
 
 
 
