--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -291,7 +291,7 @@ iframe {
   <li><a class="active" href="hell_base.html" target="iframe_a"></a></li>
   <li><a href="mainpage.html"  target="iframe_a">Home</a></li>
   <li><a href="changelog.html"  target="iframe_a">Updates</a></li>
-  <li><a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a></li>
+  <li><a href="pages/gladis.html" target="iframe_a">Click aqui para ver G.L.A.D.I.S.</a></li>
 </ul>
 
 
@@ -305,7 +305,7 @@ iframe {
       <a href="pages/gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
     </div>
   </div>
-  <div class="home"><a href="gladis.html" target="iframe_a">G.L.A.D.I.S.</a></div>
+  <div class="home"><a href="gladis.html" target="iframe_a">-> Presione aqui para ver G.L.A.D.I.S. <-</a></div>
   <div class="hell"><a href="hell.html" target="iframe_a"></a></div>
    
 </div>
