--- a/pages/changelog_base.html
+++ b/pages/changelog_base.html
@@ -48,7 +48,19 @@ iframe {
     padding: 0px 60px;
 }
 
+.marca {
+    position: relative;
+    background: #00000087;
+    width: 100%;
+    padding: 20px 0;
+}
 
+.marca a {
+    text-decoration: none;
+    position: relative;
+    color: #e5e5e5;
+    font-size: 12px;
+}
 
 
 
@@ -107,7 +119,9 @@ iframe {
 	  
 </div>
 
-
+<div class="marca">
+	  <a>© 2023 FoxtrotSaber Group. Repuplica de Panama. Todos los Derechos Reservados.</a>
+</div>
 
 </body>
 
