--- a/pages/gallery/image3.html
+++ b/pages/gallery/image3.html
@@ -42,8 +42,10 @@ body {
     background: url(images/image3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-	transition: 0.3s;
-	animation: transitionIn 0.3s;
+    transition: 0.3s;
+    animation: transitionIn 0.3s;
+    outline: 7px solid #000000;
+    outline-offset: -7px;
 }
 
 .leftnextbutton {
