--- a/pages/gladis_base.html
+++ b/pages/gladis_base.html
@@ -54,7 +54,19 @@ video#bgvid {
     padding: 0px 60px;
 }
 
+.marca {
+    position: relative;
+    background: #00000087;
+    width: 100%;
+    padding: 20px 0;
+}
 
+.marca a {
+    text-decoration: none;
+    position: relative;
+    color: #e5e5e5;
+    font-size: 12px;
+}
 
 @keyframes transitionIn {
 	from {
@@ -77,6 +89,11 @@ video#bgvid {
 <video playsinline autoplay muted loop id="bgvid">
     <source src="gladis/gladis.webm" type="video/webm">
 </video>
+
+<div class="marca">
+	  <a>© 2023 FoxtrotSaber Group. Repuplica de Panama. Todos los Derechos Reservados.</a>
+</div>
+
 
 </body>
 
