--- a/pages/hell_base.html
+++ b/pages/hell_base.html
@@ -5,7 +5,7 @@
 
 <title>
 
-Hellstrike
+Gladis
 
 </title>
 
@@ -22,8 +22,19 @@ body {
 }
 
 
+.marca {
+    position: relative;
+    background: #00000087;
+    width: 100%;
+    padding: 20px 0;
+}
 
-
+.marca a {
+    text-decoration: none;
+    position: relative;
+    color: #e5e5e5;
+    font-size: 12px;
+}
 
 
 
@@ -46,6 +57,9 @@ body {
 <body>
 
 
+<div class="marca">
+	  <a>© 2023 FoxtrotSaber Group. Repuplica de Panama. Todos los Derechos Reservados.</a>
+</div>
 
 </body>
 
