--- a/pages/mainpage_base.html
+++ b/pages/mainpage_base.html
@@ -159,12 +159,27 @@ iframe {
     padding: 0px 60px;
 }
 
+.marca {
+    position: relative;
+    background: #00000087;
+    width: 100%;
+    padding: 20px 0;
+}
+
+.marca a {
+    text-decoration: none;
+    position: relative;
+    color: #e5e5e5;
+    font-size: 12px;
+}
+
+
 
 @media screen and (max-width:1260px) {
 	.bodypage {
 		position: relative;
 		display: table;
-		width: 97%;
+		width: 90%;
 		top: 4em;
 		margin-left: auto;
 		margin-right: auto;
@@ -281,7 +296,7 @@ iframe {
 	.bodypage {
 		position: relative;
 		display: table;
-		width: 97%;
+		width: 90%;
 		top: 4em;
 		margin-left: auto;
 		margin-right: auto;
@@ -437,11 +452,14 @@ iframe {
       <a href="changelog.html" target="iframe_a">Updates</a>
       <a href="gladis.html" target="iframe_a">G.L.A.D.I.S.</a>
 	  
-	  
 </div>
 
+<div class="marca">
+	  <a>© 2023 FoxtrotSaber Group. Repuplica de Panama. Todos los Derechos Reservados.</a>
+</div>
 
 <script>
+
 
 </script>
 
