--- a/pages/gallery/image5.html
+++ b/pages/gallery/image5.html
@@ -43,9 +43,10 @@ body {
     background: url(images/image5.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-	transition: 0.3s;
-	animation: transitionIn 0.3s;
-	z-index: -100; 
+    transition: 0.3s;
+    animation: transitionIn 0.3s;
+    outline: 7px solid #000000;
+    outline-offset: -7px;
 }
 
 
